test/res/error/cd3_cmp2.tmp
bash: line 1: cd: coucou: No such file or directory
